--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+mimalloc = { version = "*", default-features = false }
 fuse3 = { version =  "0.8" , features = ["tokio-runtime"] }
 libc = "0.2"
 clap = { version = "4", features = ["derive"] }
